--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "dotenv>=0.9.9",
     "flask>=3.1.2",
     "flask-sqlalchemy>=3.1.1",
     "psycopg2-binary>=2.9.11",
